# quant_finance

./: .gitignore  README.md  pyproject.toml
configs/: evolutionary_nsga2.yaml  features.yaml  universe_etf.yaml  walk_forward.yaml
docs/: experimental_protocol.md  final_release_checklist.md  report_index.md
notebooks/: 01_research_results_review.ipynb
reports/: baseline_metrics.json  baseline_metrics_summary.md  data_quality_prices.json  factor_rotation_grid_smoke.json  factor_rotation_grid_smoke_summary.md  feature_quality_report.json  final_project_hygiene_check.json  nsga2_train_smoke.json  nsga2_train_smoke_summary.md  one_split_optimizer_selection.json  one_split_optimizer_selection_summary.md  recovery_reproducibility_check.json  recovery_reproducibility_reference.json  report_artifact_inventory.json  walk_forward_baseline_metrics.json  walk_forward_baseline_oos_equity.parquet  walk_forward_baseline_oos_equity_summary.json  walk_forward_baseline_oos_equity_summary.md  walk_forward_baseline_summary.md  walk_forward_optimizer_selection.json  walk_forward_optimizer_selection_summary.md  walk_forward_optimizer_stitched_oos_equity.parquet  walk_forward_optimizer_stitched_oos_equity_summary.json  walk_forward_optimizer_stitched_oos_equity_summary.md  walk_forward_splits.json
scripts/: build_features.py  build_final_release_checklist.py  build_final_results_notebook.py  build_walk_forward_oos_equity.py  build_walk_forward_optimizer_stitched_oos_equity.py  check_documentation_integrity.py  check_final_project_hygiene.py  check_report_artifacts.py  download_prices.py  (+34 more)
(+54 files in other folders)
