[project]
name = "p5-quant-finance-pipeline"
version = "0.1.0"
description = "Evolutionary quantitative finance research pipeline for ETF tactical allocation."
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "AI/ML Portfolio Project" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.coverage.run]
source = ["src"]
branch = true